# mcp9600

./: Cargo.toml  README.md
src/: encode.rs.bak  lib.rs  main.rs.bak  mcp9600.rs  reg.rs.bak  types.rs
