[package]
name = "mcp9600"
version = "0.1.1"
edition = "2021"
description = "Basic embedded-hal-based I2C driver for the MCP9600 and MCP9601 thermocouple amplifier ICs"
repository = "https://github.com/besselfunct/mcp9600"
license = "MIT"
keywords = ["thermocouple","I2C","embedded"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
bitvec = "~1.0"
