[package]
name = "mcp9600"
version = "0.1.1"
edition = "2021"
description = "Basic embedded-hal-based I2C driver for the MCP9600 and MCP9601 thermocouple amplifier ICs"
repository = "https://github.com/besselfunct/mcp9600"
license = "MIT"
keywords = ["thermocouple","I2C","embedded"]
categories = ["embedded"]

[features]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
